samples/_failures_safe/1761210841_acee91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c4b59d.c:138:1: error: expected identifier or ‘(’ at end of input
  138 | void
      | ^~~~
